--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -3,6 +3,7 @@
     = form.text_field :name, placeholder:"name"
     = form.text_field :description, placeholder:"description"
     = form.text_field :cotegory, placeholder:"cotegory"
+    = form.text_field :brand, placeholder:"brand"
     = form.text_field :status, placeholder:"status"
     = form.text_field :postage, placeholder:"postage"
     = form.text_field :ship_from, placeholder:"ship_from"
