--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,8 @@
+@import "reset";
+@import "font-awesome-sprockets";
+@import "font-awesome";
 @import "posts/show";
+@import "posts/index";
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -15,4 +19,3 @@
  *= require_self
  */
 
-@import "reset";
