データベース編集

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,7 +22,7 @@
   
    <div class="field">
     <%= f.label :lastname %><br />
-    <%= f.text_field :lasttname %>
+    <%= f.text_field :lastname %>
   </div>
   <div class="field">
     <%= f.label :firstname %><br />
@@ -31,7 +31,7 @@
 
   <div class="field">
     <%= f.label :lastname_kana %><br />
-    <%= f.text_field :lasttname_kana %>
+    <%= f.text_field :lastname_kana %>
   </div>
   <div class="field">
     <%= f.label :firstname_kana %><br />
