--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -9,7 +9,7 @@
         %tbody
           %tr
             %th 出品者
-            %td= link_to "#{@post.user.name}"#, new_user_session_path
+            %td= link_to "#{@post.user.nickname}"#, new_user_session_path
           %tr
             %th カテゴリー
             %td= link_to "#{@post.cotegory}"#, new_user_registration_path
