--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -169,3 +169,4 @@
         %li.bread-crumbs-box-left
         = link_to "メルカリ>", root_path
         %li.bread-crumbs-box-right 　dholic  ローファー スウェード
+  = render partial: "footer"
