マイページ実装

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
 @import "posts/show";
 @import "posts/index";
 
+@import "mypage/index";
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
