--- a/app/views/posts/_header.html.haml
+++ b/app/views/posts/_header.html.haml
@@ -94,6 +94,6 @@
             %i.fas.fa-check
             やることリスト
         %li.right-content1
-          =link_to '#', class: "header-menu" do
+          =link_to "mypages", class: "header-menu" do
             %img.usericon{alt: "", src: "https://static.mercdn.net/images/member_photo_noimage_thumb.png"}
             .usericon-name マイページ
