--- a/app/assets/stylesheets/mypage/index.scss
+++ b/app/assets/stylesheets/mypage/index.scss
@@ -2,6 +2,11 @@
   height: 48px;
   background: #fff;
   border-top: 1px solid #eee;
+
+  .breadcrumbs{
+    padding: 13px;
+    font-size: 15px;
+  }
 }
 .main{
   width: 1020px;
