--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -48,7 +48,7 @@
         -@post.each do |post|
           %li.item__box-list
             .itme__box-tipe
-            =link_to "/posts/#{post.id}", class: "item__box-image" do
+            =link_to post_path(post.id), class: "item__box-image" do
               =image_tag "https://upload.wikimedia.org/wikipedia/commons/thumb/2/22/Pride_of_Pets_Dog_Show%2C_2011_%286271388774%29.jpg/250px-Pride_of_Pets_Dog_Show%2C_2011_%286271388774%29.jpg", size: '20x20', class:'itme-image'
               .itme__box-tipe2
                 = post.name
