--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -1,12 +1,92 @@
-.form
-  = form_for @post do |form|
-    = form.text_field :name, placeholder:"name"
-    = form.text_field :description, placeholder:"description"
-    = form.text_field :cotegory, placeholder:"cotegory"
-    = form.text_field :brand, placeholder:"brand"
-    = form.text_field :status, placeholder:"status"
-    = form.text_field :postage, placeholder:"postage"
-    = form.text_field :ship_from, placeholder:"ship_from"
-    = form.text_field :shipping_date, placeholder:"shipping_date"
-    = form.text_field :price, placeholder:"price"
-    = form.submit
+!!!
+.container
+  .main
+    .main_container
+      .container-into
+        .container-into_header 商品の情報を入力
+        .form
+          = form_for @post do |form|
+            .text
+              .image_upload
+                .image_upload_box
+                  .image_upload_title 出品画像
+                  .must 必須
+                .text 最大１０枚までアップロードできます。
+                .image_box_main
+                  #preview
+                  %label{for:"image",class:"image_box"}
+                    %input{name:"item[item_images_attributes][][image]" ,type: "file", value: "",id:"image",class:"image_boxs",accept: "image/*",multiple:  true,data: {image: 0}}/
+              .good_content
+                .good_content_box
+                  .good_content_title 商品名
+                  .must 必須
+                = form.text_field :name, placeholder:"商品名（必須40文字まで)",class: "good_box"
+                .good_description 
+                  .good_description_title 商品の説明
+                  .must 必須
+                = form.text_field :description, placeholder:"商品説明(必須1000文字まで)",class:"good_description_box"
+              .good_content_detail
+                .good_content_detail_title 商品の詳細
+                .good_content_form  
+                  .good_form_1
+                    .good_form_1_box
+                      .good_form_1_title カテゴリー
+                      .must 必須
+                    = select_tag :cotegory, options_for_select(["レディース", "メンズ", "ベビーキッズ", "インテリア", "本","おもちゃ","コスメ","家電","スポーツ","ハンドメイド","チケット","自転車","その他"]),class:"good_form_box"
+                  .good_form_2
+                    .good_form_2_box
+                      .good_form_2_title 商品の状態
+                      .must 必須
+                    = select_tag :status, options_for_select(["新品","未使用に近い","目立った傷なし","やや傷や汚れあり","汚れ傷あり","状態が悪い"]),class:"good_form_box"
+              .good_send_how
+                .good_send_how_title_box
+                  .good_send_how_title 配送について
+                  .good_send_question ?
+                  -# = link_to "?"
+                .good_send_how_form
+                  .good_send_how_form_1
+                    .good_send_task
+                      .good_send_task_title 配送料の負担
+                      .must 必須
+                    = select_tag :postage, options_for_select(["送料込み（出品者負担)","着払い(購入者負担)"]),class:"good_send_task_box"
+                  .good_send_how_form_2
+                    .good_area
+                      .good_area_title 発送元の地域
+                      .must 必須
+                    = select_tag :ship_from, options_for_select(["北海道","青森","岩手","宮城","秋田","山形","福島","茨城","栃木","群馬","埼玉","千葉","東京","神奈川","新潟","富山","石川","福井","山梨","長野","岐阜","静岡","愛知","三重","滋賀","京都","大阪","兵庫","奈良","和歌山","鳥取","島根","岡山","兵庫","広島","山口","徳島","香川","愛媛","高知","福岡","佐賀","長崎","大分","熊本","宮崎","鹿児島","沖縄","未定"]),class:"good_area_box"
+                  .good_send_how_form_3
+                    .good_send_day
+                      .good_send_day_title 発送までの日数
+                      .must 必須
+                    = select_tag :shipping_date, options_for_select(["1~2日で配送","3~4日で配送","5~6日で配送"]),class:"good_send_day_box"
+              .good_cost
+                .good_cost_title_box
+                  .good_cost_title 販売価格(300~9,999,999)
+                  .good_cost_question ?
+                  -# = link_to "?"
+                .good_cost_box    
+                  .cost
+                    .cost_clearfix_box
+                      .title_cost
+                        .cost_clearfix_titie 価格
+                        .must 必須
+                      .cost_clearfix_num
+                        .money_key ¥
+                        = form.text_field :price, placeholder:"例300",class: "input_cost"
+                  .tasx 
+                    .tasx_clreafix
+                      .left_task 販売手数料(10%)
+                      .rigth_task -
+                  .profit
+                    .profit_box
+                      .left_profit 販売利益
+                      .rigth_profit -
+              .sell_btn
+                .sell_btn_text
+                  .h1 禁止されている出品、行為を必ずご確認ください
+                  .h2 またブランド品でシリアルナンバー等がある場合はご記載ください。偽ブランドの販売は犯罪であり処罰される可能性があります。
+                  .h3 また、出品をもちまして加盟店規約に同意したことになります。
+                .sell_btn_confirm 
+                  .sell_btn_confirm_text 出品する
+                .sell_btn_back
+                  .sell_btn_back_text もどる
