--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,7 @@
 @import "posts/new";
 
 @import "mypage/index";
+@import "mypage/show";
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
