--- a/app/views/layouts/_breadcrumbs.html.haml
+++ b/app/views/layouts/_breadcrumbs.html.haml
@@ -1,2 +1,10 @@
 .breadcrumbs
   = breadcrumbs pretext: "",separator: " &rsaquo; ", class: "breadcrumbs-list"
+
+  -# .breadcrumbs
+  -# %span.pretext You are here:
+  -# %a{:href => "/"} Home
+  -# ›
+  -# %a{:href => "/issues"} All issues
+  -# ›
+  -# %span.current My Issue
