--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,7 @@
 
 @import "mypage/index";
 @import "mypage/show";
+@import "buy_order_confirmations";
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
