--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -13,7 +13,7 @@
                   .must 必須
                 .text 最大１０枚までアップロードできます。
                 .image_box_main
-                  #preview
+                  .preview
                   %label{for:"image",class:"image_box"}
                     %input{name:"item[item_images_attributes][][image]" ,type: "file", value: "",id:"image",class:"image_boxs",accept: "image/*",multiple:  true,data: {image: 0}}/
               .good_content
