--- a/app/assets/stylesheets/buy_order_confirmations.scss
+++ b/app/assets/stylesheets/buy_order_confirmations.scss
@@ -1,3 +1,154 @@
 // Place all the styles related to the buy_order_confirmations controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.main_buy_order{
+  .content_buy_order{
+    width: 700px;
+    margin: 0 auto;
+    height: 1000px;
+    .content_title{
+      text-align: center;
+      font-size: 25px;
+    }
+    .content_good_box {
+      margin:0px 40px 0 130px;
+      padding: 40px 40px 0 40px;
+      width: 50%;
+      .content_good_box_form{
+        display: flex;
+        width: 100%;
+        height: 130px;
+        border-top: 1px solid #f5f5f5;
+        .content_good_image{
+          height: 90px;
+          width: 70px;
+          margin: 20px;
+        }
+        .content_good_text{
+          width: 210px;
+          height: 90px;
+          margin: 20px;
+        }
+      }
+      .content_good_detail{
+        height: 230px;
+        width: 100%;
+        .good_cost{
+          width: 100%;
+          height: 40px;
+          .good_cost_box{
+            display: flex;
+            width: 100%;
+            padding: 0px 100px 0 100px;
+            .buy_money{
+              margin-right: 20px;
+              font-size: 22px;
+            }
+            .send_tax{
+              padding-top: 5px;
+            }
+          }
+        }
+        .good_point{
+          width: 100%;
+          height: 40px;
+          background-color: lightgray;
+          .good_point_display{
+            text-align: center;
+            padding-top: 10px;
+          }
+        }
+        .buy_cost{
+          width: 100%;
+          height: 50px;
+          .buy_cost_box{
+            display: flex;
+            font-size: 20px;
+            .cost_display{
+              margin-top:20px;
+              width: 300px;
+            }
+            .real_cost{
+              margin-top:20px;
+              text-align: right;
+              width: 300px;
+            }
+          }
+        }
+        .attend_content{
+          width: 100%;
+          color: red;
+          font-size: 15px;
+          text-align: center;
+          margin-top: 10px;
+        }
+        .purchase{
+          width: 100%;
+          background-color: gray;
+          height: 40px;
+          margin-top: 20px;
+          .purchase_text{
+            text-align: center;
+            color: white;
+            padding-top: 10px;
+          }
+        }
+      }
+    }
+    .content_user{
+      border-top: 1px solid #f5f5f5;
+      width: 50%;
+      height: 200px;
+      margin:0px 40px 0 130px;
+      padding: 40px 40px 0 40px;
+      .content_user_box{
+        width: 100%;
+        height: 70%;
+        .address{
+          width: 100%;
+          height: 15%;
+        }
+        .person_address{
+          width: 100%;
+          height: 70%;
+          
+        }
+        .address_change{
+          text-align: right;
+          width: 100%;
+          height: 15%;
+          color: skyblue;
+        }
+      }
+    }
+    .content_cost {
+      border-top: 1px solid #f5f5f5;
+      width: 50%;
+      height: 200px;
+      margin:0px 40px 0 130px;
+      padding: 40px 40px 0 40px;
+      .content_cost_box{
+        width: 100%;
+        height: 70%;
+        .cost_how{
+          width: 100%;
+          height: 15%;
+        }
+        .cost_detail{
+          width: 100%;
+          height: 55%;
+        }
+        .cost_in_cost{
+          width: 100%;
+          height: 15%;
+        }
+        .cost_change{
+          text-align: right;
+          width: 100%;
+          height: 15%;
+          color: skyblue;
+        }
+      }
+    }
+  }
+}
