ログアウト画面

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,9 @@
 
 @import "mypage/index";
 @import "mypage/show";
+@import "mypage/destroy";
+@import "mypage/delete";
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
