--- a/app/views/mypages/index.html.haml
+++ b/app/views/mypages/index.html.haml
@@ -22,6 +22,7 @@
         %li.content__list
           =link_to "#", class: "list-name" do
             =image_tag('/img/logo_red.svg',class:"gazou")
+            %i.fas.fa-chevron-right
             .content__list-text
               .text 事務局から個別メッセージ「ログイン通知」
               .time
@@ -30,6 +31,7 @@
         %li.content__list
           =link_to "#", class: "list-name" do
             =image_tag('/img/logo_red.svg',class:"gazou")
+            %i.fas.fa-chevron-right
             .content__list-text
               .text 事務局から個別メッセージ「ログイン通知」
               .time
@@ -38,6 +40,7 @@
         %li.content__list
           =link_to "#", class: "list-name" do
             =image_tag('/img/logo_red.svg',class:"gazou")
+            %i.fas.fa-chevron-right
             .content__list-text
               .text 事務局から個別メッセージ「ログイン通知」
               .time
@@ -46,6 +49,7 @@
         %li.content__list
           =link_to "#", class: "list-name" do
             =image_tag('/img/logo_red.svg',class:"gazou")
+            %i.fas.fa-chevron-right
             .content__list-text
               .text 事務局から個別メッセージ「ログイン通知」
               .time
@@ -54,6 +58,7 @@
         %li.content__list
           =link_to "#", class: "list-name" do
             =image_tag('/img/logo_red.svg',class:"gazou")
+            %i.fas.fa-chevron-right
             .content__list-text
               .text 事務局から個別メッセージ「ログイン通知」
               .time
